--- a/prayerbook/fasting.plist
+++ b/prayerbook/fasting.plist
@@ -5,8 +5,24 @@
 	<key>Петров пост</key>
 	<string>Пост начинается через неделю после Дня Святой Троицы и завершается 12 июля, в день святых первоверховных апостолов Петра и Павла.\nВ течение поста нельзя вкушать мясные и молочные продукты, а также яйца. Рыбу можно есть во все дни, кроме понедельника, среды и пятницы.
     </string>
+    <key>Успенский пост</key>
+    <string>Успенский пост начинается 14 августа и длится 2 недели, заканчиваясь 27 августа. Он подготавливает к празднику Успения Пресвятой Богородицы, который отмечается 28 августа.\nПо строгости Успенский приближается к Великому посту. Во все дни поста, кроме праздника Преображения Господня (19 августа) возможно вкушение только растительной пищи.\nВ праздник Преображения Господня (19 августа) разрешается употреблять в пищу рыбу, а также елей и вино.</string>
+    <key>Рождественский пост</key>
+    <string>Рождественский пост длится с 28 ноября по 6 января и предваряет праздник Рождества Христова (7 января). В народе Рождественский пост называют Филипповым, т. к. он начинается сразу после дня памяти апостола Филиппа – 14 (27) ноября.\nРождественский пост близок к апостольскому до дня святителя Николая – 19 декабря. Далее пост становится более строгим, и вкушать рыбу можно лишь в выходные. Затем, в предпразднество, рыбу есть нельзя. В сочельник (6 января, канун Рождества) не разрешается принимать пищу до появления первой звезды.</string>
+    <key>Великий пост</key>
+    <string>Великий пост состоит из 2 постов – Четыредесятницы и Страстной седмицы. Четыредесятница длится 40 дней в память о сорокадневном посте Иисуса Христа в пустыне. Страстная седмица установлена в память о страданиях Христа.\nВеликий пост считается временем всеобщего духовного очищения и освящения. Условиями такого очищения являются не только ограничения в пище, но и оставление греха.\nНа протяжении всего поста, кроме праздников Благовещения и Недели Ваий, нельзя есть мясо, молоко, сыр, яйца и рыбу. В праздники допускается вкушение рыбы.</string>
+    <key>Масленица</key>
+    <string>Всю седмицу, включая среду и пятницу, разрешено есть рыбу, яйца, сыр, молочные продукты, но запрещено вкушать мясо.</string>
     <key>Растительная пища</key>
     <string>Разрешается употреблять любую растительную пищу, приготовленную на огне с использованием растительного масла, а также хлеб.\nПолностью исключаются из рациона мясные и молочные продукты, яйца, рыба.
     </string>
+    <key>Разрешается рыба</key>
+    <string>Разрешается употреблять в пищу рыбу, растительное масло и все виды растительной пищи.</string>
+    <key>Сухоядение</key>
+    <string>Сухоядение подразумевает приготовление блюд из продуктов, не подвергшихся термической обработке. Разрешается употреблять в пищу свежие или моченые фрукты, квашеные или соленые овощи и грибы, а также мед и орехи. Запрещено употреблять в пищу растительное масло, вино, а также горячие напитки - чай, кофе, отвары.</string>
+    <key>Горячая без масла</key>
+    <string>Разрешено употреблять любую растительную пищу, приготовленную на огне без использования растительного масла.</string>
+    <key>Горячая с маслом</key>
+    <string>Разрешено употреблять любую растительную пищу, приготовленную на огне с использованием растительного масла.</string>
 </dict>
 </plist>
