--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -317,7 +317,7 @@
 	<key>St. Nicholas the Wonderworker</key>
 	<string>Святителя Николая, архиепископа Мир Ликийских чудотворца (ок. 345)</string>
 	<key>Beginning of Great Lent</key>
-	<string>Начало Великого поста. В чистый понедельник - полное воздержание от пищи. В остальное время: понедельник, среда, пятница – сухоядение (вода, хлеб, фрукты, овощи, компоты); вторник, четверг – горячая пища без масла; суббота, воскресенье – пища с растительным маслом.</string>
+	<string>Начало Великого поста</string>
 	<key>Week of the Publican and the Pharisee</key>
 	<string>Седмица мытаря и фарисея</string>
 	<key>Week of the Prodigal Son</key>
@@ -331,11 +331,11 @@
 	<key>Sunday of the Dread Judgement</key>
 	<string>Неделя мясопустная (о страшнем суде)</string>
 	<key>Beginning of Dormition fast</key>
-	<string>Начало Успенского поста. Понедельник, среда, пятница – сухоядение. Вторник, четверг – горячая пища без масла. В субботу и воскресенье разрешается пища с растительным маслом. В день Преображения Господня (19 августа) разрешается рыба.</string>
+	<string>Начало Успенского поста</string>
 	<key>Beginning of Nativity fast</key>
-	<string>Начало Рождественского поста. До дня Св. Николая (19.12): сухоядение в среду и пятницу. В понедельник - горячая без масла. В остальные дни – рыба. После 19.12 и до предпраздненства рыба - только в субботу и воскресенье, предпразднество - без рыбы. В сочельник не вкушать пищу до первой звезды.</string>
+	<string>Начало Рождественского поста</string>
 	<key>Beginning of Apostoles&apos; fast</key>
-	<string>Начало Петрова поста. Сухоядение в среду и пятницу. В понедельник можно горячую пищу без масла. В остальные дни – рыба, грибы, крупы с растительным маслом.</string>
+	<string>Начало Петрова поста</string>
 	<key>Sunday of the Holy Forefathers</key>
 	<string>Неделя святых праотцев</string>
 	<key>Sunday before the Nativity of Christ, of the Fathers</key>
