Book model and view classes moved to swift_toolkit

--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -70,5 +70,9 @@
 	<string>Настройки</string>
 	<key>Prayerbook</key>
 	<string>Молитвослов</string>
+    <key>Delete</key>
+    <string>Удалить</string>
+    <key>No bookmarks</key>
+    <string>Нет закладок</string>
 </dict>
 </plist>
