--- a/prayerbook/trans_library_cn.plist
+++ b/prayerbook/trans_library_cn.plist
@@ -161,6 +161,8 @@
     <key>Malachi</key>
     <string>玛拉基亚</string>
     
+    <key>Eucharist prayers</key>
+    <string>圣体血礼仪</string>
     <key>The order of reading Canons and Akathists when alone</key>
     <string>独自诵念圣颂典和弗坐词仪轨</string>
     <key>Akathist to our Sweetest Lord Jesus Christ</key>
