--- a/prayerbook/trans_library_cn.plist
+++ b/prayerbook/trans_library_cn.plist
@@ -82,216 +82,191 @@
 	<string>默示录（启示录）</string>
 	<key>Stasis</key>
 	<string>荣光赞词</string>
-    <key>Genesis</key>
-    <string>创世纪</string>
-    <key>Exodus</key>
-    <string>出谷纪</string>
-    <key>Leviticus</key>
-    <string>肋未纪</string>
-    <key>Numbers</key>
-    <string>户籍纪</string>
-    <key>Deuteronomy</key>
-    <string>申命纪</string>
-    <key>Joshua</key>
-    <string>若苏厄书</string>
-    <key>Judges</key>
-    <string>民长纪</string>
-    <key>Ruth</key>
-    <string>卢德传</string>
-    <key>1 Samuel</key>
-    <string>撒慕尔纪上</string>
-    <key>2 Samuel</key>
-    <string>撒慕尔纪下</string>
-    <key>1 Kings</key>
-    <string>列王纪上</string>
-    <key>2 Kings</key>
-    <string>列王纪下</string>
-    <key>1 Chronicles</key>
-    <string>编年纪上</string>
-    <key>2 Chronicles</key>
-    <string>编年纪下</string>
-    <key>Ezra</key>
-    <string>厄斯德拉上</string>
-    <key>Nehemiah</key>
-    <string>厄斯德拉下</string>
-    <key>Esther</key>
-    <string>艾斯德尔传</string>
-    <key>Job</key>
-    <string>约伯传</string>
-    <key>Psalms</key>
-    <string>圣咏集</string>
-    <key>Proverbs</key>
-    <string>箴言</string>
-    <key>Ecclesiastes</key>
-    <string>训道篇</string>
-    <key>Song of Solomon</key>
-    <string>雅歌</string>
-    <key>Isaiah</key>
-    <string>依撒意亚</string>
-    <key>Jeremiah</key>
-    <string>耶肋米亚</string>
-    <key>Lamentations</key>
-    <string>耶肋米亚哀歌</string>
-    <key>Ezekiel</key>
-    <string>厄则克耳</string>
-    <key>Daniel</key>
-    <string>达尼尔</string>
-    <key>Hosea</key>
-    <string>欧瑟亚</string>
-    <key>Joel</key>
-    <string>岳厄尔</string>
-    <key>Amos</key>
-    <string>亚毛斯</string>
-    <key>Obadiah</key>
-    <string>亚北底亚</string>
-    <key>Jonah</key>
-    <string>约纳</string>
-    <key>Micah</key>
-    <string>米该亚</string>
-    <key>Nahum</key>
-    <string>纳鸿</string>
-    <key>Habakkuk</key>
-    <string>哈巴谷</string>
-    <key>Zephaniah</key>
-    <string>索福尼亚</string>
-    <key>Haggai</key>
-    <string>哈盖</string>
-    <key>Zechariah</key>
-    <string>匝加利亚</string>
-    <key>Malachi</key>
-    <string>玛拉基亚</string>
+	<key>Genesis</key>
+	<string>创世纪</string>
+	<key>Exodus</key>
+	<string>出谷纪</string>
+	<key>Leviticus</key>
+	<string>肋未纪</string>
+	<key>Numbers</key>
+	<string>户籍纪</string>
+	<key>Deuteronomy</key>
+	<string>申命纪</string>
+	<key>Joshua</key>
+	<string>若苏厄书</string>
+	<key>Judges</key>
+	<string>民长纪</string>
+	<key>Ruth</key>
+	<string>卢德传</string>
+	<key>1 Samuel</key>
+	<string>撒慕尔纪上</string>
+	<key>2 Samuel</key>
+	<string>撒慕尔纪下</string>
+	<key>1 Kings</key>
+	<string>列王纪上</string>
+	<key>2 Kings</key>
+	<string>列王纪下</string>
+	<key>1 Chronicles</key>
+	<string>编年纪上</string>
+	<key>2 Chronicles</key>
+	<string>编年纪下</string>
+	<key>Ezra</key>
+	<string>厄斯德拉上</string>
+	<key>Nehemiah</key>
+	<string>厄斯德拉下</string>
+	<key>Esther</key>
+	<string>艾斯德尔传</string>
+	<key>Job</key>
+	<string>约伯传</string>
+	<key>Psalms</key>
+	<string>圣咏集</string>
+	<key>Proverbs</key>
+	<string>箴言</string>
+	<key>Ecclesiastes</key>
+	<string>训道篇</string>
+	<key>Song of Solomon</key>
+	<string>雅歌</string>
+	<key>Isaiah</key>
+	<string>依撒意亚</string>
+	<key>Jeremiah</key>
+	<string>耶肋米亚</string>
+	<key>Lamentations</key>
+	<string>耶肋米亚哀歌</string>
+	<key>Ezekiel</key>
+	<string>厄则克耳</string>
+	<key>Daniel</key>
+	<string>达尼尔</string>
+	<key>Hosea</key>
+	<string>欧瑟亚</string>
+	<key>Joel</key>
+	<string>岳厄尔</string>
+	<key>Amos</key>
+	<string>亚毛斯</string>
+	<key>Obadiah</key>
+	<string>亚北底亚</string>
+	<key>Jonah</key>
+	<string>约纳</string>
+	<key>Micah</key>
+	<string>米该亚</string>
+	<key>Nahum</key>
+	<string>纳鸿</string>
+	<key>Habakkuk</key>
+	<string>哈巴谷</string>
+	<key>Zephaniah</key>
+	<string>索福尼亚</string>
+	<key>Haggai</key>
+	<string>哈盖</string>
+	<key>Zechariah</key>
+	<string>匝加利亚</string>
+	<key>Malachi</key>
+	<string>玛拉基亚</string>
+	<key>Eucharist prayers</key>
+	<string>圣体血礼仪</string>
+	<key>The order of reading Canons and Akathists when alone</key>
+	<string>独自诵念圣颂典和弗坐词仪轨</string>
+	<key>Akathist to our Sweetest Lord Jesus Christ</key>
+	<string>耶稣圣名弗坐词</string>
+	<key>Canon To our Lord Jesus Christ</key>
+	<string>向我们的主耶稣基督的圣颂典</string>
+	<key>Thanksgiving Prayer Service</key>
+	<string>代圣体血礼仪</string>
+	<key>Thanksgiving after Holy Communion</key>
+	<string>领圣体圣血后的谢恩经</string>
+	<key>Order of Pre-communion prayers</key>
+	<string>预备领圣体血礼仪</string>
+	<key>Canon To the Guardian Angel</key>
+	<string>向神圣护守天使的圣颂典</string>
+	<key>Canon To the Most Holy Mother of God</key>
+	<string>向至圣诞神女的圣颂典</string>
+	<key>A Canon of Repentance to our Lord Jesus Christ</key>
+	<string>向我主耶稣基督忏悔的颂典</string>
+	<key>Prayers during the day</key>
+	<string>日间祈祷</string>
+	<key>Prayers before Sleep</key>
+	<string>寝前祈祷</string>
+	<key>Morning Prayers</key>
+	<string>晨起祈祷</string>
+	<key>The Divine Liturgy of St John Chrysostom</key>
+	<string>圣金口若望事奉圣礼</string>
+	<key>Divine Liturgy</key>
+	<string>事奉圣礼</string>
+	<key>The Liturgy of the Catechumens</key>
+	<string>慕道者礼仪</string>
+	<key>The Liturgy of the Faithful</key>
+	<string>信徒礼仪</string>
+	<key>First Exclamations</key>
+	<string>启诵</string>
+	<key>The Litany of Peace</key>
+	<string>平安连祷</string>
+	<key>The Prayer of the First Antiphon</key>
+	<string>第一唱和颂祝文</string>
+	<key>The First Antiphone</key>
+	<string>第一唱和颂</string>
+	<key>Little Litany</key>
+	<string>小连祷</string>
+	<key>The Prayer of the Second Antiphon</key>
+	<string>第二唱和颂祝文</string>
+	<key>The Second Antiphon</key>
+	<string>第二唱和颂</string>
+	<key>The Prayer of the Third Antiphon</key>
+	<string>第三唱和颂祝文</string>
+	<key>The Third Antiphone</key>
+	<string>第三唱和颂</string>
+	<key>Prayer of the Little Entrance</key>
+	<string>小入祭祝文</string>
+	<key>Prayer of the Thrice-Holy</key>
+	<string>三圣赞祝文</string>
+	<key>The Thrice-Holy (Trisagion)</key>
+	<string>三圣赞</string>
+	<key>The Epistle</key>
+	<string>新约经课</string>
+	<key>The Gospel</key>
+	<string>福音前祝文</string>
+	<key>The Litany of Fervent Supplication</key>
+	<string>热诚连祷</string>
+	<key>The Prayer of the Litany of Fervent Supplication</key>
+	<string>热诚恳祷祝文</string>
+	<key>The Litany for the Departed</key>
+	<string>求安息连祷</string>
+	<key>Prayer for the Departed</key>
+	<string>求安息祝文</string>
+	<key>The Litany of the Catechumens</key>
+	<string>慕道者连祷</string>
+	<key>The Prayer for the Catechumens</key>
+	<string>慕道者祝文</string>
+	<key>Litany</key>
+	<string>连祷</string>
+	<key>The First Prayer of the Faithful</key>
+	<string>第一信众祝文</string>
+	<key>The Second Prayer of the Faithful</key>
+	<string>第二信众祝文</string>
+	<key>The Cherubic Hymn and the Great Entry</key>
+	<string>赫儒文之歌及大入祭式</string>
+	<key>The Symbol of Faith</key>
+	<string>信经</string>
+	<key>The Anaphora</key>
+	<string>神圣祭献</string>
+	<key>Litany before the Lord&apos;s Prayer</key>
+	<string>主祷文前连祷</string>
+	<key>The Lord&apos;s Prayer</key>
+	<string>主祷文</string>
+	<key>The Communion of the People</key>
+	<string>分施圣体血</string>
+	<key>The Prayer behind the Ambo</key>
+	<string>台外祝文</string>
+	<key>Psalm 33</key>
+	<string>圣咏第33/34篇</string>
+	<key>The Dismissal</key>
+	<string>遣散式</string>
     
-    <key>Eucharist prayers</key>
-    <string>圣体血礼仪</string>
-    <key>The order of reading Canons and Akathists when alone</key>
-    <string>独自诵念圣颂典和弗坐词仪轨</string>
-    <key>Akathist to our Sweetest Lord Jesus Christ</key>
-    <string>耶稣圣名弗坐词</string>
-    <key>Canon To our Lord Jesus Christ</key>
-    <string>向我们的主耶稣基督的圣颂典</string>
-    <key>Thanksgiving Prayer Service</key>
+    <key>Typika Reader Service</key>
+    <string>平信徒代圣体血礼仪</string>
+    
+    <key>Typika</key>
     <string>代圣体血礼仪</string>
-    <key>Thanksgiving after Holy Communion</key>
-    <string>领圣体圣血后的谢恩经</string>
-    <key>Order of Pre-communion prayers</key>
-    <string>预备领圣体血礼仪</string>
-    <key>Canon To the Guardian Angel</key>
-    <string>向神圣护守天使的圣颂典</string>
-    <key>Canon To the Most Holy Mother of God</key>
-    <string>向至圣诞神女的圣颂典</string>
-    <key>A Canon of Repentance to our Lord Jesus Christ</key>
-    <string>向我主耶稣基督忏悔的颂典</string>
-    <key>Prayers during the day</key>
-    <string>日间祈祷</string>
-    <key>Prayers before Sleep</key>
-    <string>寝前祈祷</string>
-    <key>Morning Prayers</key>
-    <string>晨起祈祷</string>
     
-    <key>The Divine Liturgy of St John Chrysostom</key>
-    <string>圣金口若望事奉圣礼</string>
-    <key>Divine Liturgy</key>
-    <string>事奉圣礼</string>
-    <key>The Liturgy of the Catechumens</key>
-    <string>慕道者礼仪</string>
-    <key>The Liturgy of the Faithful</key>
-    <string>信徒礼仪</string>
-    
-    <key>First Exclamations</key>
-    <string>启诵</string>
-    
-    <key>The Litany of Peace</key>
-    <string>平安连祷</string>
-    
-    <key>The Prayer of the First Antiphon</key>
-    <string>第一唱和颂祝文</string>
-    
-    <key>The First Antiphone</key>
-    <string>第一唱和颂</string>
-    
-    <key>Little Litany</key>
-    <string>小连祷</string>
-    
-    <key>The Prayer of the Second Antiphon</key>
-    <string>第二唱和颂祝文</string>
-    
-    <key>The Second Antiphon</key>
-    <string>第二唱和颂</string>
-    
-    <key>The Prayer of the Third Antiphon</key>
-    <string>第三唱和颂祝文</string>
-    
-    <key>The Third Antiphone</key>
-    <string>第三唱和颂</string>
-    
-    <key>Prayer of the Little Entrance</key>
-    <string>小入祭祝文</string>
-    
-    <key>Prayer of the Thrice-Holy</key>
-    <string>三圣赞祝文</string>
-    
-    <key>The Thrice-Holy (Trisagion)</key>
-    <string>三圣赞</string>
-    
-    <key>The Apostle</key>
-    <string>新约经课</string>
-    
-    <key>The Gospel</key>
-    <string>福音前祝文</string>
-    
-    <key>The Litany of Fervent Supplication</key>
-    <string>热诚连祷</string>
-    
-    <key>The Prayer of the Litany of Fervent Supplication</key>
-    <string>热诚恳祷祝文</string>
-    
-    <key>The Litany for the Departed</key>
-    <string>求安息连祷</string>
-    
-    <key>Prayer for the Departed</key>
-    <string>求安息祝文</string>
-    
-    <key>The Litany of the Catechumens</key>
-    <string>慕道者连祷</string>
-    
-    <key>The Prayer for the Catechumens</key>
-    <string>慕道者祝文</string>
-    
-    <key>Litany</key>
-    <string>连祷</string>
-    
-    <key>The First Prayer of the Faithful</key>
-    <string>第一信众祝文</string>
-    
-    <key>The Second Prayer of the Faithful</key>
-    <string>第二信众祝文</string>
-    
-    <key>The Cherubic Hymn and the Great Entry</key>
-    <string>赫儒文之歌及大入祭式</string>
-    
-    <key>The Symbol of Faith</key>
-    <string>信经</string>
-    
-    <key>The Anaphora</key>
-    <string>神圣祭献</string>
-    
-    <key>Litany before the Lord's Prayer</key>
-    <string>主祷文前连祷</string>
-    
-    <key>The Lord's Prayer</key>
-    <string>主祷文</string>
-    
-    <key>The Communion of the People</key>
-    <string>分施圣体血</string>
-    
-    <key>The Prayer behind the Ambo</key>
-    <string>台外祝文</string>
-    
-    <key>Psalm 33</key>
-    <string>圣咏第33/34篇</string>
-    
-    <key>The Dismissal</key>
-    <string>遣散式</string>
+    <key>Kontakia</key>
+    <string>副赞词</string>
     
 </dict>
 </plist>
