--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -266,6 +266,8 @@
 	<string>主耶稣基督受割礼日</string>
 	<key>Eve of Theophany</key>
 	<string>主显节前夕</string>
+    <key>Epiphany Eve</key>
+    <string>主显节前夕</string>
 	<key>Holy Theophany: the Baptism of Our Lord, God, and Saviour Jesus Christ</key>
 	<string>主显节——我们的主，上帝，救主，耶稣基督神性的显现，也即基督受浸礼节</string>
 	<key>The Meeting of our Lord, God, and Saviour Jesus Christ in the Temple</key>
@@ -340,5 +342,7 @@
 	<string>主显节后安息日</string>
 	<key>Sunday after Theophany</key>
 	<string>主显节后主日</string>
+    <key>Eve of the Nativity</key>
+    <string>主降生节前日</string>
 </dict>
 </plist>
