--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -76,6 +76,11 @@
     <string>Нет закладок</string>
     <key>Bookmarks...</key>
     <string>Закладки...</string>
-  
+    <key>Calendar</key>
+    <string>Календарь</string>
+    <key>Monthly</key>
+    <string>На месяц</string>
+    <key>Yearly</key>
+    <string>На год</string>
 </dict>
 </plist>
