--- a/prayerbook/prayerbook-Info.plist
+++ b/prayerbook/prayerbook-Info.plist
@@ -33,6 +33,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app would like to add image to your Photo Library</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app does not require access to the camera.</string>
 	<key>NSMicrophoneUsageDescription</key>
