--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -84,5 +84,7 @@
     <string>На год</string>
     <key>Year %d Orthodox Calendar</key>
     <string>Православный календарь на %d г.</string>
+    <key>From %@ till %@ — %@</key>
+    <string>С %@ по %@ — %@</string>
 </dict>
 </plist>
