--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -78,6 +78,8 @@
     <string>Закладки...</string>
     <key>Calendar</key>
     <string>Календарь</string>
+    <key>Weekly</key>
+    <string>На неделю</string>
     <key>Monthly</key>
     <string>На месяц</string>
     <key>Yearly</key>
