Holy Fathers of the Seventh Ecumenical Council

--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -12,6 +12,8 @@
 	<string>Собор Нижегородских святых</string>
 	<key>Commemoration of the Holy Fathers of the First Six Councils</key>
 	<string>Память свв. отцев шести Вселенских Соборов</string>
+    <key>Commemoration of the Holy Fathers of the Seventh Ecumenical Council</key>
+    <string>Память святых отцев VII Вселенского собора</string>
 	<key>Holy Ancestors</key>
 	<string>святых Богоотцов</string>
 	<key>Departed</key>
